# hornet-manifest-spec

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  common.mk
.github/: PULL_REQUEST_TEMPLATE.md
.github/instructions/: python.instructions.md
.github/workflows/: hornet-flow-ci.yml  validate-manifest.yml
examples/: cosmic_cad_manifest.json  cosmic_sim_manifest.json  portal-device-metadata.json  simple_sim_manifest.json
hornet-flow/: Makefile  README.md  main.py  pyproject.toml  test.py
hornet-flow/examples/: portal-device-metadata.json
hornet-flow/src/hornet_flow/: cli.py  main.py  models.py  service.py
hornet-flow/test/: test.py
hornet-flow/tests/: test_hornet_manifest_loader.py
schema/: cad_manifest.schema.json
scripts/: Makefile  hornet_manifest_loader.py  test_hornet_manifest_loader.py
tools/hornet-flow/: Makefile  README.md  pyproject.toml  test.py
tools/hornet-flow/examples/: portal-device-metadata.json
tools/hornet-flow/src/hornet_flow/: __init__.py  _version.py  api.py  async_utils.py  cli.py  cli_commands.py  cli_exceptions.py  cli_state.py  exceptions.py  logging_utils.py  model.py  processors.py  service.py  watcher.py
tools/hornet-flow/src/hornet_flow/plugins/: __init__.py  base.py  debug_plugin.py  osparc_api.py  osparc_plugin.py
tools/hornet-flow/src/hornet_flow/services/: git_service.py  manifest_service.py  metadata_service.py  processor.py  watcher.py  workflow_service.py
tools/hornet-flow/src/hornet_flow/services/async/: git_service.py
tools/hornet-flow/test/: conftest.py  test_api.py  test_async_bridge.py  test_async_utils.py  test_cad_api.py  test_event_system.py  test_integration.py  test_manifest_api.py  test_repo_api.py  test_services.py  test_workflow_api.py
tools/hornet-flow/test/api/: test_api.py  test_workflow_api.py
tools/hornet-flow/tests/: conftest.py  test_async_utils.py  test_services.py
tools/hornet-flow/tests/api/: test_api.py  test_cad_api.py  test_event_system.py  test_workflow_api.py
