[project]
name = "hornet-flow"
version = "0.1.0"
description = "`hornet-flow` is a Python package for consuming GitHub repositories containing **Hornet manifest files**.
It parses manifests, loads CAD models, and configures simulation environments, enabling a smooth flow from repository to simulation.
"
requires-python = ">=3.11"
dependencies = [
     "httpx",
     "jsonschema",
     "requests",
]

[project.optional-dependencies]
test = [
     "pytest",
     "pytest-mock",
]


