[project]
name = "hornet-flow"
version = "0.1.0"
description = "`hornet-flow` is a Python package for consuming GitHub repositories containing **Hornet manifest files**. It parses manifests, loads CAD models, and configures simulation environments, enabling a smooth flow from repository to simulation."
readme = "README.md"
authors = [
    { name = "Pedro Crespo-Valero", email = "32402063+pcrespov@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "jsonschema",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
test = ["pytest", "pytest-mock"]


[project.scripts]
hornet-flow = "hornet_flow.cli:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
